updated website copy

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Bash&Spree</h2>
-							<p>Keep your wedding planning<br />
+							<p>Put your weddings<br />
 							in your pocket.<br />
 							</p>
 							<ul class="actions">
@@ -59,8 +59,7 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Calling all wedding planners!</h2>
-								<p> Access all your client's and vendor's information through one platform! <br />
-								With Bash&Spree you never have to worry about carrying computers or notebooks with  <br />you again. Keep everything organized and accessable in one clean, easy and smart application.</p>
+								<p> Have 24/7 effortless access to each wedding at your fingertips with <br/> Bash&Spree, a pocketbook of client and vendor data available on your <br/> phone.  Access all your clients’ and vendors’ information all in one place. </p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Clean</span></span></li>
@@ -74,20 +73,20 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/websiteClientsexample.png" alt="" /></div><div class="content">
-								<h2>Clean Interface <br/>and Client Plugin</h2>
-								<p>Keep clients up to date by adding a seperate login for cliental access. An intuitive interace allows for easy navigation of clients and their needs. </p>
+								<h2>Clean Interface </h2>
+								<p>An intuitive interface allows for easy navigation of clients and their needs. Allow for their special day to be magical with flawless planning. Never forget a detail or miss out on a vendor with this all in one application. </p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/inspirepageforwebsite.png" alt="" /></div><div class="content">
-								<h2>Budget, RSVP's and Inspiration</h2>
-								<p>Quick access to your client's running budget and RSVPs allows you to give exact numbers to vendors during meetings. Personalized influence from the bride allows you to constantly please the customer.</p>
+								<h2>Client Plugin</h2>
+								<p>With a client plugin, you and your client will always be on the same page. Immediate access to a Wedding Day Timeline as well as vendor information, allows the bride to be just as organized as you.  </p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/venueexample.png" alt="" /></div><div class="content">
 								<h2>All in one place</h2>
-								<p>Keep track of vendors and have quick contact access via individual vendor pages. Add your favorite vendors to your "go-to" list.</p>
+								<p>Easily add new vendors to your directory or add go-to vendors to your ‘favorites’ page. Access the running list of RSVP’s with a click of a button.  This all in one app prevents you from having to remember names and taking the time to search through contacts. </p>
 							</div>
 						</section>
 						
@@ -157,7 +156,7 @@
 							<li>(913)744-5001 </li> <li>Denver, CO </li><li> info@bashspree.com</li>
 						</ul>
 						<ul class="copyright">
-							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li style="font-size: 8px;">Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
