updated website copy, fixed section one

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Calling all wedding planners!</h2>
-								<p> Have 24/7 effortless access to each wedding at your fingertips with <br/> Bash&Spree, a pocketbook of client and vendor data available on your <br/> phone.  Access all your clients’ and vendors’ information all in one place. </p>
+								<p> Have 24/7 effortless access to each wedding at your fingertips with <br/> Bash&Spree, a pocketbook of client and vendor data available on your <br/> phone.  Access your clients’ and vendors’ information all in one place. </p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Clean</span></span></li>
