--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	<link rel="shortcut icon" href="images/favicon.ico" />
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-97194754-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body class="landing">
 
@@ -47,8 +57,12 @@
 				<p>Put your weddings<br />
 					in your pocket.<br />
 				</p>
+				<br/>
+				<p style="font-size: 18px; color: #C3DDFF;">Join us! <br/> launch party<br/>May 31st <br/><span>Anna Be Bridal Boutique</span> <br/> 5-7PM</p>
 				<ul class="actions">
-					<li><a href="#myPopup" id="myBtn" class="button special">Subscribe</a></li> 
+					<!-- for popup subscribe button 
+					<li><a href="#myPopup" id="myBtn" class="button special">RSVP!</a></li>  -->
+					<li><a href="https://www.eventbrite.com/e/bashspree-launch-party-tickets-34549160469?aff=ebdsorderfbbutton" class="button special">RSVP!</a></li> 
 				</ul>
 
 
@@ -150,7 +164,7 @@
 					<footer id="footer">
 						<ul class="icons">
 							<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li> -->
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.facebook.com/bashspree/" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/bashspree/?hl=en" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<!-- <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 							<li><a href="mailto:info@bashspree.com?Subject=Hello" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
@@ -238,16 +252,6 @@ window.onclick = function(event) {
 		modal.style.display = "none";
 	}
 }
-</script>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-97194754-1', 'auto');
-  ga('send', 'pageview');
 
 </script>
 
